# webgrep

./: LICENSE  README.md  pyproject.toml
skill/webserp/: SKILL.md
src/webgrep/: cli.py  search.py
src/webgrep/engines/: __init__.py  base.py  bing.py  brave.py  duckduckgo.py  google.py  presearch.py  startpage.py  yahoo.py
src/webserp/: cli.py  client.py
src/webserp/engines/: __init__.py  mojeek.py
